<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/no_data"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/timezone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/details_button"
            android:layout_width="match_parent"
            android:text="@string/details"
            android:layout_height="45dp" />

    </LinearLayout>


    <Button
        android:id="@+id/refresh_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:text="@string/refresh_forecast" />

</RelativeLayout>