<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Location info-->
    <LinearLayout
        android:id="@+id/location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_info" />

        <TextView
            android:id="@+id/location_coordinates_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data" />

    </LinearLayout>

    <!--Daily info-->
    <LinearLayout
        android:id="@+id/daily_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_container"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/daily_forecast" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/daily_forecast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_tv"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </LinearLayout>

    <!--Daily info-->
    <LinearLayout
        android:id="@+id/hourly_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/daily_container"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/hourly_forecast" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hourly_forecast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_tv"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </LinearLayout>

    <!--Loading view-->
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />


    <!--Bottom Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <Button
            android:id="@+id/refresh_forecast"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/refresh_forecast" />

    </LinearLayout>

</RelativeLayout>